@@ -348,6 +348,9 @@
                 - In 'views.base', in the class-views 'BaseCreation' & 'RelatedBaseCreation' (& so, in their child classes),
                   the attribute 'initial_status' has been removed.
                 - The method 'populate.Populator.create_reports()' has been replaced by a new one, '_populate_reports()'.
+                - The UUIDs of the instances of the models '*Status', 'PaymentTerms', 'SettlementTerms' & 'AdditionalInformation'
+                  created by the 'populate' script are now fixed (to be consistent between Creme instances).
+                  A data migration fixes the UUIDs of the instances provided by default, and stores the old UUIDs in their field "meta_data".
             * Opportunities :
                 - The UUIDs of the instances of the models 'SalesPhase' & 'Origin' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                   A data migration fixes the UUIDs of the instances provided by default, and stores the old UUIDs in their field "meta_data".
